# django-project-checks

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  README  README.md  django_urls.txt.tmp  pyproject.toml  tox.ini  urls.txt
.github/workflows/: tox.yml
demo/: settings.py
project_checks/management/: base.py
project_checks/management/commands/: __init__.py  base.py  freeze_django_urls.py
project_checks/templates/project_checks/: django_url.txt
tests/: settings.py  test_command.py
tests/management/commands/: count_lines.py  test_command.py
